[project]
name = "aioquant"
version = "1.1.0"
description = "Asynchronous event I/O driven quantitative trading framework."
authors = [
    { name = "firebirds", email = "tangd86@gmail.com" },
]
dependencies = [
    "aioamqp==0.15.0",
    "aiodns==3.0.0",
    "aiofile==3.8.7",
    "aiohttp==3.8.4",
    "aioretry==5.0.2",
    "aiosignal==1.3.1",
    "anyio==4.4.0",
    "asttokens==2.2.1",
    "async-timeout==4.0.2",
    "attrs==22.2.0",
    "backcall==0.2.0",
    "blinker==1.8.2",
    "caio==0.9.12",
    "camelot-py==0.11.0",
    "ccxt==3.0.51",
    "certifi==2022.12.7",
    "cffi==1.15.1",
    "chardet==5.2.0",
    "charset-normalizer==3.1.0",
    "click==8.1.7",
    "cryptofeed==2.3.2",
    "cryptography==39.0.2",
    "decorator==5.1.1",
    "dep-logic==0.4.4",
    "distlib==0.3.8",
    "dolphindb==1.30.22.1",
    "et-xmlfile==1.1.0",
    "exceptiongroup==1.2.2",
    "executing==1.2.0",
    "filelock==3.15.4",
    "findpython==0.6.1",
    "frozenlist==1.3.3",
    "future==0.18.3",
    "gevent==22.10.2",
    "ghostscript==0.7",
    "greenlet==2.0.2",
    "h11==0.14.0",
    "hishel==0.0.30",
    "httpcore==1.0.5",
    "httpx==0.27.0",
    "idna==3.4",
    "importlib-metadata==8.2.0",
    "importlib-resources==6.4.0",
    "installer==0.7.0",
    "ipdb==0.13.13",
    "ipython==8.12.2",
    "jedi==0.18.2",
    "Jinja2==3.1.2",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.2",
    "matplotlib-inline==0.1.6",
    "mdurl==0.1.2",
    "msgpack==1.0.8",
    "multidict==6.0.4",
    "numpy==1.23.4",
    "opencv-python==4.10.0.84",
    "openpyxl==3.1.5",
    "order-book==0.6.0",
    "packaging==23.1",
    "pamqp==3.2.1",
    "pandas==1.5.2",
    "parso==0.8.3",
    "pbs-installer==2024.4.24",
    "pdfminer-six==20240706",
    "pdftopng==0.2.3",
    "pdm==2.17.3",
    "pexpect==4.8.0",
    "pickleshare==0.7.5",
    "platformdirs==4.2.2",
    "prettytable==3.6.0",
    "prompt-toolkit==3.0.38",
    "ptyprocess==0.7.0",
    "pudb==2022.1.3",
    "pure-eval==0.2.2",
    "pycares==4.3.0",
    "pycparser==2.21",
    "pyecharts==2.0.2",
    "Pygments==2.15.1",
    "pypdf==4.3.0",
    "pyproject-hooks==1.1.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.1",
    "pytz==2022.7.1",
    "PyYAML==6.0",
    "requests==2.28.2",
    "resolvelib==1.0.1",
    "rich==13.7.1",
    "scipy==1.10.1",
    "shellingham==1.5.4",
    "simplejson==3.18.4",
    "six==1.16.0",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "stack-data==0.6.2",
    "tabulate==0.9.0",
    "tomli==2.0.1",
    "tomlkit==0.13.0",
    "traitlets==5.9.0",
    "typing-extensions==4.12.2",
    "unearth==0.16.1",
    "urllib3==1.26.15",
    "urwid==2.1.2",
    "urwid-readline==0.13",
    "uvloop==0.17.0",
    "virtualenv==20.26.3",
    "wcwidth==0.2.6",
    "websocket==0.2.1",
    "websocket-client==1.5.3",
    "websockets==11.0.3",
    "yapic-json==1.9.1",
    "yarl==1.8.2",
    "zipp==3.19.2",
    "zope-event==4.6",
    "zope-interface==6.0",
]
requires-python = ">=3.8"
readme = "README.md"

[project.license]
text = "MIT"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
