[project]
name = "aioquant"
version = "1.0.1"
description = "Asynchronous event I/O driven quantitative trading framework."
authors = [
    {name = "firebirds", email = "tangd86@gmail.com"},
]
dependencies = [
    "setuptools>=72.1.0",
    "aiohttp>=3.10.0",
    "aioamqp>=0.15.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
